CHANGES
=======

* Update Changelog
* dont test on python3 with twisted < 15.4

0.2.1
-----

* skip await test due to syntax error on prev python

0.2.0
-----

* update link and badge to readthedoc
* update badges
* dont use setup.py test
* fix unit test in travis
* matrix conf in travis
* support for upcoming deferredCoroutine
* executing yapf and codestyle
* prepare an env for python3
* add documentation

0.1.0
-----

* enabling flake8 and release 0.1.0
* update README
* update req
* unit test pass
* first version (unit test fails)
* skip pypy
* enable coveralls
* fix tox for each conf in travis
* enable travis build
* initial commit